@@ -1,9 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.102 2005/04/10 13:41:59 allanonjl Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.103 2005/04/16 19:09:31 allanonjl Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
+  16 Apr 2005; John N. Laliberte <allanonjl@gentoo.org>
+  Complete overhaul of RcDotConf.
+  
   10 Apr 2005; John N. Laliberte <allanonjl@gentoo.org>
   Added check to ensure uid is an int and not a str.
   Changed named of root password button in gui, added
